# Chess

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: asset.h  board.c  board.h  core.c  core.h  game.c  game.h  main.c  move.c  move.h  piece.h  player.h  renderer.c  renderer.h
src/UI/: event.h  render_object.h  renderer.c  renderer.h  ui.h  window.h
src/UI/SDL/: event.c  renderer.c  ui.c  window.c
src/UI/SDL/components/: button.c
src/UI/SDL/scenes/: scene.c
src/UI/components/: button.c  button.h  component.h
src/UI/scenes/: layer.h  menu.c  menu.h  scene.h
src/UI/shapes/: rectangle.h  shape.h
src/lib/engine/: CMakeLists.txt
src/lib/engine/include/engine/: color.h  engine.h  event.h  layer.h  render_object.h  renderer.h  scene.h  texture.h  window.h
src/lib/engine/include/engine/components/: button.h  component.h
src/lib/engine/include/engine/geometry/: point.h
src/lib/engine/include/engine/shapes/: rectangle.h  shape.h
src/lib/engine/src/: renderer.c  window.c
src/lib/engine/src/SDL/: event.c  renderer.c  texture.c  ui.c  window.c
src/lib/engine/src/components/: button.c
src/lib/utils/: CMakeLists.txt
src/lib/utils/include/utils/: action.h  list.h
src/lib/utils/src/: list.c
src/lib/utils/tests/utils/: list.tests.c
src/ui/layers/: game_layer.h
src/ui/layers/game/: board_layer.c  board_layer.h  hint_layer.c  hint_layer.h  piece_layer.c  piece_layer.h
src/ui/scenes/: game_scene.c  game_scene.h
src/utils/: list.c  list.h
tests/utils/: list.tests.c
